--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,14 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  position: relative;
   scroll-snap-align: start;
 }
 #cover iframe {
   top: 50%;
-  transform: translateY(50%);
+  transform: translateY(-50%);
+  position: absolute;
+  z-index: -1;
 }
 #cover #masthead {
   display: flex;
@@ -42,7 +45,7 @@
 }
 #cover #masthead .placement {
   width: calc(100% - 40px);
-  margin: 20px auto 20px auto;
+  margin: 40px auto 20px auto;
 }
 #cover #masthead .studio {
   display: flex;
