--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,13 +89,8 @@
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  height: 450px;
+  height: 100vh;
   scroll-snap-align: start;
-}
-@media only screen and (min-width: 670px) {
-  .sections {
-    height: 100vh;
-  }
 }
 .sections .layer {
   position: relative;
@@ -118,7 +113,7 @@
     font-size: 6rem;
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 670px) {
   .sections p.bigtxt {
     padding: 90px;
   }
@@ -145,14 +140,18 @@
   text-align: left;
   top: 5%;
   left: 5%;
+  max-width: 350px;
 }
-
-.offer {
-  background-color: white;
+@media only screen and (min-width: 1024px) {
+  .sections p.topleft {
+    max-width: 650px;
+  }
 }
 
 .slider {
   z-index: 0;
+  display: flex;
+  height: 100vh;
 }
 .slider ul {
   overflow-y: hidden;
@@ -176,19 +175,29 @@
 }
 .slider ul li {
   scroll-snap-align: center;
-  padding: 0 125px 40px 0;
+  padding: 0 20px 40px 20px;
   scroll-snap-stop: always;
   flex-shrink: 0;
   scroll-snap-align: start;
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 300px;
   justify-content: center;
   position: relative;
 }
+@media only screen and (min-width: 670px) {
+  .slider ul li {
+    width: 600px;
+  }
+}
 .slider ul li:nth-of-type(1) {
-  padding: 0 125px 40px 50px;
+  padding: 0 0px 40px 20px;
   justify-content: flex-end;
+}
+@media only screen and (min-width: 670px) {
+  .slider ul li:nth-of-type(1) {
+    padding: 0 40px 40px 40px;
+  }
 }
 .slider ul li.top-align {
   justify-content: flex-start;
@@ -208,12 +217,6 @@
   margin: 0;
   padding-top: 10px;
 }
-.slider ul li iframe {
-  width: 100% !important;
-  height: 75%;
-  object-fit: contain;
-}
-
 .slider ul:-webkit-scrollbar {
   display: none;
 }
@@ -243,52 +246,99 @@
 
 #clients {
   background-color: black;
-  height: auto;
+  height: 100vh;
+  /*
+  .clientgrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
+
+
+
+    @include big-display;
+    padding: 20px;
+
+    @media only screen and (min-width: 1024px) {
+      padding: 20px;
+    }
+
+    @media only screen and (min-width: 1024px) {
+      padding: 15%;
+  }
+
+    > div {
+      background: black;
+      padding: 15%;
+      position: relative;
+      &::before {
+        // for apsect ratio
+        content: "";
+        display: block;
+        padding-bottom: 100%;
+      }
+      img {
+        position: absolute;
+        max-width: 170px;
+
+        // Alternate Version
+        // top: 0;
+        // bottom: 0;
+        // right: 0;
+        // left: 0;
+        // margin: auto;
+
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+  */
 }
 #clients p {
   color: white;
 }
+#clients #clientcover {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+  height: 100vh;
+  margin: 0 auto;
+  width: calc(100% - 40px);
+}
 #clients .clientgrid {
+  width: 100%;
+  padding: 15vh 0 5vh 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 1rem;
-  font-family: "juni";
-  text-align: center;
-  line-height: 1;
-  font-size: 3rem;
-  padding: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 @media only screen and (min-width: 670px) {
   #clients .clientgrid {
-    font-size: 6rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+}
+#clients .clientgrid .clientlogo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#clients .clientgrid .clientlogo img {
+  width: 100%;
+  max-width: 70px;
+  margin: 0 auto;
+}
+@media only screen and (min-width: 670px) {
+  #clients .clientgrid .clientlogo img {
+    max-width: 140px;
   }
 }
 @media only screen and (min-width: 1024px) {
-  #clients .clientgrid {
-    padding: 20px;
+  #clients .clientgrid .clientlogo img {
+    max-width: 200px;
   }
-}
-@media only screen and (min-width: 1024px) {
-  #clients .clientgrid {
-    padding: 15%;
-  }
-}
-#clients .clientgrid > div {
-  background: black;
-  padding: 15%;
-  position: relative;
-}
-#clients .clientgrid > div::before {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
-}
-#clients .clientgrid > div img {
-  position: absolute;
-  max-width: 170px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 #about {
@@ -301,6 +351,78 @@
   color: black;
   font-family: "juni";
   font-size: 25px;
+}
+
+#bio {
+  justify-content: space-between;
+  align-items: center;
+  margin: 30%;
+}
+#bio p {
+  text-align: justify;
+}
+
+#archive {
+  background-color: white;
+}
+
+.links {
+  font-family: "juni";
+  text-align: center;
+  line-height: 1.2;
+  font-size: 1rem;
+  position: relative;
+  text-align: left;
+  top: 15%;
+  left: 5%;
+}
+@media only screen and (min-width: 670px) {
+  .links {
+    font-size: 2rem;
+  }
+}
+.links a {
+  color: #6b97ad;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  line-height: 1.4;
+  position: relative;
+}
+.links a:hover {
+  text-decoration: underline;
+}
+.links a:hover span {
+  display: block;
+  left: 80%;
+}
+.links a span {
+  position: absolute;
+  display: none;
+  z-index: 1;
+  top: 10%;
+}
+.links a span.bottomlinks {
+  background: yellow;
+  bottom: 50%;
+  top: initial;
+}
+
+.movie {
+  position: relative;
+  overflow: hidden;
+  padding-top: 100%;
+}
+
+.movie iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100%;
+  border: 0;
+}
+.movie iframe.sixteen-nine {
+  height: 143%;
 }
 
 /*# sourceMappingURL=style.css.map */
