--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,7 @@
   background-position: center;
   overflow: hidden;
   scroll-snap-align: start;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100vh;
 }
 .sections .layer {
   position: relative;
@@ -176,7 +175,7 @@
 }
 .slider ul li {
   scroll-snap-align: center;
-  padding: 0 20px 50px 20px;
+  padding: 0 20px 60px 20px;
   scroll-snap-stop: always;
   flex-shrink: 0;
   scroll-snap-align: start;
@@ -192,7 +191,7 @@
   }
 }
 .slider ul li:nth-of-type(1) {
-  padding: 0 0px 50px 20px;
+  padding: 0 0px 60px 20px;
   justify-content: flex-end;
 }
 @media only screen and (min-width: 834px) {
