--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -163,9 +163,9 @@ body {
     background-position: center;
     overflow: hidden;
     scroll-snap-align: start;
-    //height: 100vh; //add this back in if below doesnt work
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
+    height: 100vh; //add this back in if below doesnt work
+  //  min-height: 100vh;
+  //  min-height: -webkit-fill-available;
 
 
     .layer {
@@ -258,7 +258,7 @@ body {
     li {
       scroll-snap-align: center;
 
-      padding: 0 20px 50px 20px;
+      padding: 0 20px 60px 20px;
       scroll-snap-stop: always;
       flex-shrink: 0;
       scroll-snap-align: start;
@@ -274,7 +274,7 @@ body {
       }
 
       &:nth-of-type(1){
-        padding: 0 0px 50px 20px;
+        padding: 0 0px 60px 20px;
         justify-content: flex-end;
         @media only screen and (min-width: 834px) {
           padding: 0 40px 40px 40px;
