--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@
   height: 100vh;
   position: relative;
   scroll-snap-align: start;
+  overflow-y: none;
 }
 #cover iframe {
   top: 50%;
@@ -96,7 +97,7 @@
   position: relative;
 }
 .sections .layer.poster {
-  height: 100%;
+  height: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -175,7 +176,7 @@
 }
 .slider ul li {
   scroll-snap-align: center;
-  padding: 0 20px 60px 20px;
+  padding: 0 20px 80px 20px;
   scroll-snap-stop: always;
   flex-shrink: 0;
   scroll-snap-align: start;
@@ -191,7 +192,7 @@
   }
 }
 .slider ul li:nth-of-type(1) {
-  padding: 0 0px 60px 20px;
+  padding: 0 0px 80px 20px;
   justify-content: flex-end;
 }
 @media only screen and (min-width: 834px) {
