--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,6 +86,7 @@ body {
   height: 100vh;
   position: relative;
   scroll-snap-align: start;
+  overflow-y: none;
 
   iframe {
     top: 50%;
@@ -172,7 +173,7 @@ body {
       position: relative;
       //overflow-y: hidden;
       &.poster {
-        height: 100%;
+        height: 90%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -258,7 +259,7 @@ body {
     li {
       scroll-snap-align: center;
 
-      padding: 0 20px 60px 20px;
+      padding: 0 20px 80px 20px;
       scroll-snap-stop: always;
       flex-shrink: 0;
       scroll-snap-align: start;
@@ -274,7 +275,7 @@ body {
       }
 
       &:nth-of-type(1){
-        padding: 0 0px 60px 20px;
+        padding: 0 0px 80px 20px;
         justify-content: flex-end;
         @media only screen and (min-width: 834px) {
           padding: 0 40px 40px 40px;
