--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@
 }
 @media only screen and (min-width: 834px) {
   #cover #masthead .studio {
-    max-width: 600px;
+    max-width: 700px;
     margin: 0 auto 0 20px;
   }
 }
@@ -212,11 +212,14 @@
   object-fit: contain;
   width: 100%;
 }
-.slider ul li p {
+.slider ul p {
   font-size: 1.3rem;
   font-family: "juni-ital", arial;
   margin: 0;
   padding-top: 10px;
+}
+.slider ul p.vertslidedescript {
+  margin-left: 21%;
 }
 .slider ul:-webkit-scrollbar {
   display: none;
